# im-select-rs

./: .gitignore  Cargo.toml  EXAMPLES.md  LICENSE  README.md
src/: main.rs
src/platform/: linux_impl.rs  macos_impl.rs  mod.rs  windows_impl.rs
